Implementação endpoint cadastrar evento

--- a/backend-v2/src/main/resources/messages.properties
+++ b/backend-v2/src/main/resources/messages.properties
@@ -3,3 +3,5 @@ NotEmpty=Este campo {0} não pode ser vazio
 NotNull=Este campo {0} não pode ser nulo
 Size=Este campo {0} deve ter no mínimo {2} e no máximo {1} caracteres
 Email=Este campo {0} está inválido
+FutureOrPresent=Este campo {0} deve ser no presente ou futuro
+URL=Este campo {0} está inválido
